--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "build": "microbundle",
     "deduplicate": "yarn-deduplicate yarn.lock",
     "lint": "eslint '{src,tests}/**/*.{ts,tsx}' --fix",
-    "prepare": "rimraf dist && yarn build"
+    "prepare": "rimraf dist && yarn build",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -35,18 +36,22 @@
     }
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "eslint": "^7.18.0",
+    "@types/jest": "^26.0.20",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.8",
+    "jest": "^26.6.3",
+    "jest-electron": "^0.1.11",
     "lint-staged": "^10.5.3",
     "microbundle": "^0.13.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^26.5.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3",
     "yarn-deduplicate": "^3.1.0"
