--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.0",
     "tslib": "^2.1.0",
-    "typescript": "^4.1.3",
-    "yarn-deduplicate": "^3.1.0"
+    "typescript": "^4.1.3"
   }
 }
