--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "exports": "./dist/create-canvas-context.modern.js",
   "esmodule": "./dist/create-canvas-context.modern.js",
   "esnext": "./dist/create-canvas-context.modern.js",
-  "types": "./dist/create-canvas-context.d.ts",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "microbundle --tsconfig tsconfig.build.json",
     "clean": "jest --clearCache && rimraf node_modules",
