--- a/package.json
+++ b/package.json
@@ -27,14 +27,9 @@
     "build": "microbundle --tsconfig tsconfig.build.json",
     "clean": "jest --clearCache && rimraf node_modules",
     "lint": "eslint '{src,tests}/**/*.{ts,tsx}' --fix",
-    "prepare": "rimraf dist && yarn build",
+    "prepare": "simple-git-hooks && rimraf dist && yarn build",
     "release": "yarn login && np",
     "test": "jest"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
@@ -45,7 +40,6 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "jest-electron": "^0.1.11",
     "lint-staged": "^10.5.3",
@@ -53,6 +47,7 @@
     "np": "^7.4.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "simple-git-hooks": "^2.4.1",
     "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
   }
