--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "scripts": {
     "build": "microbundle --tsconfig tsconfig.build.json",
     "clean": "jest --clearCache && rimraf node_modules",
-    "lint": "eslint '{src,tests}/**/*.{ts,tsx}' --fix",
-    "prepare": "simple-git-hooks && rimraf dist && yarn build",
+    "lint": "eslint '**/*.{ts,tsx}' --fix",
+    "prepare": "rimraf dist && yarn build",
     "release": "yarn login && np",
     "test": "jest"
   },
@@ -42,12 +42,10 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "jest-electron": "^0.1.11",
-    "lint-staged": "^10.5.3",
     "microbundle": "^0.13.0",
     "np": "^7.4.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "simple-git-hooks": "^2.4.1",
     "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
   }
