--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["dom", "esnext"],
+    "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
