--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   },
   "devDependencies": {
     "@types/listr": "^0.14.3",
+    "@types/prettier": "^2.3.1",
     "@types/rimraf": "^3.0.0",
+    "@types/write-file-atomic": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "app-exists": "^2.1.1",
@@ -52,6 +54,7 @@
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.5",
+    "write-file-atomic": "^3.0.3",
     "write-json-file": "^4.3.0"
   }
 }
