--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-unicorn": "^34.0.1",
     "listr": "^0.14.3",
     "listr-input": "^0.2.1",
     "microbundle": "^0.13.3",
