--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@swc-node/jest": "^1.3.1",
     "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
@@ -47,7 +48,6 @@
     "np": "^7.4.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
   }
 }
