--- a/package.json
+++ b/package.json
@@ -23,6 +23,17 @@
   "esmodule": "./dist/create-canvas-context.modern.js",
   "esnext": "./dist/create-canvas-context.modern.js",
   "types": "./dist/index.d.ts",
+  "lint-staged": {
+    "**/*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "scripts": {
     "build": "microbundle --tsconfig tsconfig.build.json",
     "clean": "jest --clearCache && rimraf node_modules",
@@ -36,8 +47,10 @@
     "@swc-node/jest": "^1.3.1",
     "@types/jest": "^26.0.20",
     "eslint": "^7.30.0",
+    "husky": "4.3.8",
     "jest": "^26.6.3",
     "jest-electron": "^0.1.11",
+    "lint-staged": "^11.0.0",
     "microbundle": "^0.13.0",
     "np": "^7.4.0",
     "prettier": "^2.2.1",
