--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ios-symbols",
   "version": "0.0.0",
-  "description": "A list of every symbol from SF Symbols.",
+  "description": "A collection of every symbol from SF Symbols.",
   "author": "Marc Bouchenoire",
   "license": "MIT",
   "repository": "https://github.com/bouchenoiremarc/ios-symbols",
@@ -36,14 +36,17 @@
     }
   },
   "scripts": {
-    "build": "microbundle",
+    "build": "microbundle --tsconfig tsconfig.build.json",
+    "clean": "jest --clearCache && rimraf node_modules",
     "lint": "eslint '**/*.{ts,tsx}' --fix",
     "generate": "node -r esbuild-register scripts/generate.ts",
     "prepare": "rimraf dist && yarn build",
-    "release": "yarn login && np"
+    "release": "yarn login && np",
+    "test": "jest"
   },
   "devDependencies": {
     "@bouchenoiremarc/eslint-config": "^1.0.0",
+    "@types/jest": "^26.0.24",
     "@types/listr": "^0.14.3",
     "@types/prettier": "^2.3.1",
     "@types/rimraf": "^3.0.0",
@@ -54,6 +57,7 @@
     "esbuild-register": "^2.6.0",
     "eslint": "^7.30.0",
     "husky": "4.3.8",
+    "jest": "^27.0.6",
     "lint-staged": "^11.0.0",
     "listr": "^0.14.3",
     "listr-input": "^0.2.1",
@@ -61,6 +65,7 @@
     "np": "^7.5.0",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.3.5",
     "write-file-atomic": "^3.0.3",
     "write-json-file": "^4.3.0"
