--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
   "scripts": {
     "build": "microbundle --tsconfig tsconfig.build.json",
     "clean": "jest --clearCache && rimraf node_modules",
-    "lint": "eslint '**/*.{ts,tsx}' --fix",
+    "lint": "eslint '**/*.{ts,tsx}' --fix && prettier --write '**/*.{ts,tsx}'",
     "generate": "node -r esbuild-register scripts/generate.ts",
     "prepare": "rimraf dist && yarn build",
     "release": "yarn login && np",
     "test": "jest"
   },
   "devDependencies": {
-    "@bouchenoiremarc/eslint-config": "^1.1.0",
+    "@bouchenoiremarc/eslint-config": "^1.3.0",
     "@types/jest": "^26.0.24",
     "@types/listr": "^0.14.3",
     "@types/prettier": "^2.3.1",
