--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@bouchenoiremarc/eslint-config": "^1.3.0",
     "@types/jest": "^26.0.24",
     "@types/listr": "^0.14.3",
+    "@types/node": "^16.4.3",
     "@types/prettier": "^2.3.1",
     "@types/rimraf": "^3.0.0",
     "@types/write-file-atomic": "^3.0.2",
