--- a/packages/ios-symbols/tsconfig.build.json
+++ b/packages/ios-symbols/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig",
-  "include": ["src"],
+  "include": ["declarations.d.ts", "src"],
   "compilerOptions": {
     "rootDir": "src"
   }
