--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   main:
-    runs-on: ubuntu-latest
+    runs-on: macOS-latest
     timeout-minutes: 10
     steps:
       - name: Checkout commit
