--- a/packages/ios-symbols/package.json
+++ b/packages/ios-symbols/package.json
@@ -32,7 +32,7 @@
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "eslint --fix",
-      "tsc-mixed --project tsconfig.json",
+      "tsc-mixed --project tsconfig.json declarations.d.ts",
       "prettier --write"
     ]
   },
@@ -68,6 +68,6 @@
     "microbundle": "^0.13.3",
     "ts-jest": "^27.0.3",
     "write-file-atomic": "^3.0.3",
-    "write-json-file": "^4.3.0"
+    "write-json-file": "^5.0.0"
   }
 }
