Change site URL

--- a/packages/ios-symbols/package.json
+++ b/packages/ios-symbols/package.json
@@ -5,7 +5,7 @@
   "author": "Marc Bouchenoire",
   "license": "MIT",
   "repository": "https://github.com/bouchenoiremarc/ios-symbols",
-  "homepage": "https://www.marcbouchenoire.com/ios-symbols",
+  "homepage": "https://marcbouchenoire.com/projects/ios-symbols",
   "keywords": [
     "ios",
     "symbols",
