--- a/lerna.json
+++ b/lerna.json
@@ -4,9 +4,11 @@
   "publishConfig": {
     "access": "public"
   },
-  "packages": ["packages/*"],
+  "packages": [
+    "packages/*"
+  ],
   "useWorkspaces": true,
-  "version": "1.0.1",
+  "version": "1.0.2",
   "command": {
     "publish": {
       "allowBranch": "main",
