--- a/packages/ios-symbols/package.json
+++ b/packages/ios-symbols/package.json
@@ -44,26 +44,26 @@
     "lint:eslint": "eslint '**/*.{ts,tsx}' --fix",
     "lint:prettier": "prettier --write '**/*.{ts,tsx}' --loglevel silent",
     "lint:tsc": "tsc --project tsconfig.json",
-    "generate": "node -r esbuild-register scripts/generate.ts",
+    "generate": "node -r @swc-node/register scripts/generate.ts",
     "prepare": "rimraf dist && yarn build",
     "prepublishOnly": "yarn test",
     "test": "jest"
   },
   "devDependencies": {
+    "@swc-node/register": "^1.3.6",
     "@types/jest": "^27.0.1",
     "@types/listr": "^0.14.3",
     "@types/prettier": "^2.3.1",
     "@types/write-file-atomic": "^3.0.2",
-    "app-exists": "^2.1.1",
+    "app-exists": "^1.1.0",
     "chalk": "^4.1.1",
     "clipboardy": "^2.3.0",
-    "esbuild-register": "^3.0.0",
     "jest": "^27.0.6",
     "listr": "^0.14.3",
     "listr-input": "^0.2.1",
     "microbundle": "^0.13.3",
     "ts-jest": "^27.0.3",
     "write-file-atomic": "^3.0.3",
-    "write-json-file": "^5.0.0"
+    "write-json-file": "^4.3.0"
   }
 }
