--- a/packages/ios-symbols/package.json
+++ b/packages/ios-symbols/package.json
@@ -50,6 +50,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@swc-node/jest": "^1.3.3",
     "@swc-node/register": "^1.3.6",
     "@types/jest": "^27.0.1",
     "@types/listr": "^0.14.3",
@@ -62,7 +63,6 @@
     "listr": "^0.14.3",
     "listr-input": "^0.2.1",
     "microbundle": "^0.13.3",
-    "ts-jest": "^27.0.3",
     "write-file-atomic": "^3.0.3",
     "write-json-file": "^4.3.0"
   }
