--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     }
   },
   "types": "./dist/index.d.ts",
+  "prettier": "@bouchenoiremarc/prettier-config",
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "eslint --fix",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@bouchenoiremarc/eslint-config": "^2.0.0",
+    "@bouchenoiremarc/prettier-config": "^1.1.0",
     "@swc-node/jest": "^1.3.1",
     "@types/jest": "^27.0.1",
     "@types/offscreencanvas": "^2019.6.3",
