--- a/packages/site/.stylelintrc
+++ b/packages/site/.stylelintrc
@@ -1,17 +1,3 @@
 {
-  "plugins": [
-    "stylelint-scss",
-    "stylelint-order"
-  ],
-  "extends": [
-    "stylelint-config-recommended-scss",
-    "stylelint-config-css-modules",
-    "stylelint-config-idiomatic-order",
-    "stylelint-config-prettier"
-  ],
-  "defaultSeverity": "warning",
-  "rules": {
-    "at-rule-no-unknown": null,
-    "scss/at-rule-no-unknown": true
-  }
+  "extends": "@bouchenoiremarc/stylelint-config/scss"
 }
