--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -9,7 +9,7 @@
       "prettier --write"
     ],
     "**/*.scss": [
-      "stylelint --fix --syntax scss",
+      "stylelint --fix",
       "prettier --write"
     ]
   },
@@ -21,7 +21,7 @@
     "lint": "yarn lint:eslint & yarn lint:stylelint && yarn lint:tsc && yarn lint:prettier",
     "lint:eslint": "eslint '**/*.{ts,tsx}' --fix",
     "lint:prettier": "prettier --write '**/*.{ts,tsx}' --loglevel silent",
-    "lint:stylelint": "stylelint '**/*.scss' --fix --syntax scss",
+    "lint:stylelint": "stylelint '**/*.scss' --fix",
     "lint:tsc": "tsc --project tsconfig.json"
   },
   "dependencies": {
@@ -36,15 +36,11 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@bouchenoiremarc/stylelint-config": "^1.1.0",
     "@types/css-font-loading-module": "^0.0.6",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "sass": "^1.36.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-css-modules": "^2.2.0",
-    "stylelint-config-idiomatic-order": "^8.1.0",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-recommended-scss": "^4.3.0",
-    "stylelint-scss": "^3.20.1"
+    "stylelint": "^14.0.1"
   }
 }
