--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -5,6 +5,7 @@
     "allowJs": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true
   }
 }
