--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "eslint --fix",
-      "tsc-mixed --project tsconfig.json",
+      "tsatsiki --project tsconfig.json",
       "prettier --write"
     ]
   },
@@ -66,7 +66,7 @@
     "np": "^7.4.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "tsc-mixed": "^1.0.0",
+    "tsatsiki": "^1.0.1",
     "typescript": "^4.1.3"
   }
 }
