--- a/packages/ios-symbols/package.json
+++ b/packages/ios-symbols/package.json
@@ -32,7 +32,7 @@
   "lint-staged": {
     "**/*.{ts,tsx}": [
       "eslint --fix",
-      "tsc-mixed --project tsconfig.json declarations.d.ts",
+      "tsatsiki --project tsconfig.json declarations.d.ts",
       "prettier --write"
     ]
   },
