--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "eslint.validate": ["typescript", "typescriptreact"],
-  "eslint.workingDirectories": ["packages/site", "packages/ios-symbols"],
+  "eslint.workingDirectories": ["packages/site", "packages/symbolist"],
   "files.exclude": {
     "node_modules": true,
     "yarn.lock": true
