--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "root",
+  "name": "",
   "private": true,
   "prettier": "@bouchenoiremarc/prettier-config",
   "husky": {
@@ -13,8 +13,8 @@
   "scripts": {
     "site:dev": "yarn workspace site dev",
     "site:build": "yarn workspace site build",
-    "generate": "yarn workspace ios-symbols generate",
-    "build": "yarn workspace ios-symbols build",
+    "generate": "yarn workspace symbolist generate",
+    "build": "yarn workspace symbolist build",
     "lint": "lerna run lint --stream",
     "test": "lerna run test --stream",
     "prepare": "lerna run prepare --stream",
