--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "clsx": "^1.1.1",
     "framer-motion": "^5.0.0",
-    "ios-symbols": "^1.1.0",
+    "symbolist": "^1.1.0",
     "just-debounce-it": "^2.0.0",
     "leva": "^0.9.13",
     "next": "^12.0.1",
