Tweak package.json keywords

--- a/packages/symbolist/package.json
+++ b/packages/symbolist/package.json
@@ -7,7 +7,7 @@
   "repository": "https://github.com/bouchenoiremarc/symbolist",
   "homepage": "https://marcbouchenoire.com/projects/symbolist",
   "keywords": [
-    "ios",
+    "san francisco",
     "symbols",
     "icons",
     "font"
