--- a/package.json
+++ b/package.json
@@ -29,10 +29,17 @@
   "types": "./dist/index.d.ts",
   "prettier": "@bouchenoiremarc/prettier-config",
   "lint-staged": {
+    "**/*.mjs": [
+      "eslint --fix",
+      "prettier --ignore-path .eslintignore --write"
+    ],
     "**/*.{ts,tsx}": [
       "eslint --fix",
       "tsatsiki --project tsconfig.json",
-      "prettier --write"
+      "prettier --ignore-path .eslintignore --write"
+    ],
+    "**/*.{json,md,yml}": [
+      "prettier --ignore-path .eslintignore --write"
     ]
   },
   "husky": {
@@ -42,31 +49,30 @@
   },
   "scripts": {
     "build": "microbundle --tsconfig tsconfig.build.json",
-    "clean": "jest --clearCache && rimraf dist node_modules",
     "lint": "yarn lint:eslint && yarn lint:tsc && yarn lint:prettier",
-    "lint:eslint": "eslint '**/*.{ts,tsx}' --fix",
-    "lint:prettier": "prettier --write '**/*.{ts,tsx}' --loglevel silent",
+    "lint:eslint": "eslint '**/*.{mjs,ts,tsx}' --fix",
+    "lint:prettier": "prettier '**/*.{mjs,ts,tsx,json,md,yml}' --ignore-path .eslintignore --write --loglevel silent",
     "lint:tsc": "tsc --project tsconfig.json",
-    "prepare": "rimraf dist && yarn build",
+    "prepublishOnly": "yarn build",
     "release": "yarn login && np",
-    "test": "jest"
+    "test": "wtr",
+    "test:coverage": "yarn test --coverage"
   },
   "devDependencies": {
-    "@bouchenoiremarc/eslint-config": "^2.0.0",
+    "@bouchenoiremarc/eslint-config": "^2.2.1",
     "@bouchenoiremarc/prettier-config": "^1.1.0",
-    "@swc-node/jest": "^1.3.1",
-    "@types/jest": "^27.0.1",
-    "@types/offscreencanvas": "^2019.6.3",
-    "eslint": "^8.2.0",
+    "@types/offscreencanvas": "^2019.6.4",
+    "@web/dev-server-esbuild": "^0.2.16",
+    "@web/test-runner": "^0.13.22",
+    "@web/test-runner-puppeteer": "^0.10.4",
+    "eslint": "^8.3.0",
     "husky": "4.3.8",
-    "jest": "^26.6.3",
-    "jest-electron": "^0.1.11",
-    "lint-staged": "^11.0.0",
-    "microbundle": "^0.13.0",
-    "np": "^7.4.0",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2",
+    "lint-staged": "^12.1.2",
+    "microbundle": "^0.14.2",
+    "np": "^7.6.0",
+    "prettier": "^2.4.1",
     "tsatsiki": "^1.0.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.5.2",
+    "uvu": "^0.5.2"
   }
 }
