Run CI with Node 14

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "dist",
     "src"
   ],
+  "engines": {
+    "node": "^14.13.1 || >=16.0.0"
+  },
   "sideEffects": false,
   "source": "./src/index.ts",
   "main": "./dist/create-canvas-context.js",
