Replace Jest by uvu with coverage and simplify linting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "node_modules": true,
     "yarn.lock": true
   },
+  "prettier.ignorePath": ".gitignore",
   "stylelint.enable": true,
   "stylelint.validate": ["scss"]
 }
