--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
       "pre-commit": "lerna run --concurrency 1 --stream precommit --since HEAD --exclude-dependents"
     }
   },
+  "engines": {
+    "node": "^14.13.1 || >=16.0.0"
+  },
   "workspaces": [
     "packages/*"
   ],
@@ -15,24 +18,22 @@
     "site:build": "yarn workspace site build",
     "generate": "yarn workspace symbolist generate",
     "build": "yarn workspace symbolist build",
+    "test": "yarn workspace symbolist test",
+    "test:coverage": "yarn workspace symbolist test:coverage",
     "lint": "lerna run lint --stream",
-    "test": "lerna run test --stream",
-    "prepare": "lerna run prepare --stream",
-    "release": "lerna publish",
-    "clean": "lerna run clean && rimraf node_modules"
+    "release": "yarn test && lerna publish"
   },
   "devDependencies": {
-    "@bouchenoiremarc/eslint-config": "^2.1.0",
+    "@bouchenoiremarc/eslint-config": "^2.2.1",
     "@bouchenoiremarc/prettier-config": "^1.1.0",
-    "@types/node": "^16.4.2",
-    "@types/rimraf": "^3.0.0",
-    "eslint": "^8.2.0",
+    "@types/node": "^16.11.10",
+    "eslint": "^8.3.0",
     "husky": "4.3.8",
     "lerna": "^4.0.0",
-    "lint-staged": "^11.0.0",
-    "prettier": "^2.3.2",
-    "rimraf": "^3.0.2",
+    "lint-staged": "^12.1.2",
+    "prettier": "^2.4.1",
     "tsatsiki": "^1.0.1",
-    "typescript": "^4.3.5"
+    "tsm": "^2.1.4",
+    "typescript": "^4.5.2"
   }
 }
