--- a/packages/symbolist/package.json
+++ b/packages/symbolist/package.json
@@ -30,40 +30,44 @@
   },
   "types": "./dist/index.d.ts",
   "lint-staged": {
+    "**/*.mjs": [
+      "eslint --fix",
+      "prettier --ignore-path .eslintignore --write"
+    ],
     "**/*.{ts,tsx}": [
       "eslint --fix",
       "tsatsiki --project tsconfig.json declarations.d.ts",
       "prettier --write"
+    ],
+    "**/*.{json,md,yml}": [
+      "prettier --ignore-path .eslintignore --write"
     ]
   },
   "scripts": {
     "precommit": "lint-staged",
     "build": "microbundle --tsconfig tsconfig.build.json",
-    "clean": "jest --clearCache && rimraf dist node_modules",
     "lint": "yarn lint:eslint && yarn lint:tsc && yarn lint:prettier",
-    "lint:eslint": "eslint '**/*.{ts,tsx}' --fix",
-    "lint:prettier": "prettier --write '**/*.{ts,tsx}' --loglevel silent",
+    "lint:eslint": "eslint '**/*.{mjs,ts,tsx}' --fix",
+    "lint:prettier": "prettier --write '**/*.{mjs,ts,tsx,json,md,yml}' --loglevel silent",
     "lint:tsc": "tsc --project tsconfig.json",
-    "generate": "node -r @swc-node/register scripts/generate.ts",
-    "prepare": "rimraf dist && yarn build",
-    "prepublishOnly": "yarn test",
-    "test": "jest"
+    "generate": "tsm scripts/generate.ts",
+    "prepublishOnly": "yarn build",
+    "test": "uvu --require tsm tests",
+    "test:coverage": "c8 --include=src yarn test && c8 report --reporter=lcov"
   },
   "devDependencies": {
-    "@swc-node/jest": "^1.3.3",
-    "@swc-node/register": "^1.3.6",
-    "@types/jest": "^27.0.1",
-    "@types/listr": "^0.14.3",
-    "@types/prettier": "^2.3.1",
+    "@types/listr": "^0.14.4",
+    "@types/prettier": "^2.4.2",
     "@types/write-file-atomic": "^3.0.2",
-    "app-exists": "^1.1.0",
-    "chalk": "^4.1.1",
-    "clipboardy": "^2.3.0",
-    "jest": "^27.0.6",
+    "app-exists": "^2.1.1",
+    "c8": "^7.10.0",
+    "chalk": "^4.1.2",
+    "clipboardy": "^3.0.0",
     "listr": "^0.14.3",
     "listr-input": "^0.2.1",
-    "microbundle": "^0.13.3",
+    "microbundle": "^0.14.2",
+    "uvu": "^0.5.2",
     "write-file-atomic": "^3.0.3",
-    "write-json-file": "^4.3.0"
+    "write-json-file": "^5.0.0"
   }
 }
