--- a/packages/symbolist/package.json
+++ b/packages/symbolist/package.json
@@ -51,7 +51,7 @@
     "lint:eslint": "eslint '**/*.{mjs,ts,tsx}' --fix",
     "lint:prettier": "yarn prettier '**/*.{mjs,ts,tsx,json,md,yml}'",
     "lint:tsc": "tsc --project tsconfig.json",
-    "generate": "tsm scripts/generate.ts && yarn prettier 'src/data/*.{ts,json}'",
+    "generate": "node --loader tsm scripts/generate.ts && yarn prettier 'src/data/*.{ts,json}'",
     "prepublishOnly": "yarn build",
     "test": "uvu --require tsm tests",
     "test:coverage": "c8 --include=src yarn test && c8 report --reporter=lcov"
