--- a/packages/symbolist/package.json
+++ b/packages/symbolist/package.json
@@ -54,19 +54,19 @@
     "generate": "node --loader tsm scripts/generate.ts && yarn prettier 'src/data/*.{ts,json}'",
     "prepublishOnly": "yarn build",
     "test": "uvu --require tsm tests",
-    "test:coverage": "c8 --include=src yarn test && c8 report --reporter=lcov"
+    "test:coverage": "nyc --temp-dir=.nyc.log --include=src yarn test && nyc report --temp-dir=.nyc.log --reporter=lcov"
   },
   "devDependencies": {
     "@types/listr": "^0.14.4",
     "@types/prettier": "^2.4.2",
     "@types/write-file-atomic": "^3.0.2",
     "app-exists": "^2.1.1",
-    "c8": "^7.10.0",
     "chalk": "^4.1.2",
     "clipboardy": "^3.0.0",
     "listr": "^0.14.3",
     "listr-input": "^0.2.1",
     "microbundle": "^0.14.2",
+    "nyc": "^15.1.0",
     "uvu": "^0.5.2",
     "write-file-atomic": "^3.0.3",
     "write-json-file": "^5.0.0"
