--- a/packages/symbolist/package.json
+++ b/packages/symbolist/package.json
@@ -61,12 +61,12 @@
     "@types/prettier": "^2.4.2",
     "@types/write-file-atomic": "^3.0.2",
     "app-exists": "^2.1.1",
-    "chalk": "^4.1.2",
     "clipboardy": "^3.0.0",
     "listr": "^0.14.3",
     "listr-input": "^0.2.1",
     "microbundle": "^0.14.2",
     "nyc": "^15.1.0",
+    "picocolors": "^1.0.0",
     "uvu": "^0.5.2",
     "write-file-atomic": "^3.0.3",
     "write-json-file": "^5.0.0"
