Build before running site commands

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "packages/*"
   ],
   "scripts": {
-    "site:dev": "yarn workspace site dev",
-    "site:build": "yarn workspace site build",
+    "site:dev": "yarn build && yarn workspace site dev",
+    "site:build": "yarn build && yarn workspace site build",
     "generate": "yarn workspace symbolist generate",
     "build": "yarn workspace symbolist build",
     "test": "yarn workspace symbolist test",
