--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -1,6 +1,6 @@
 {
   "name": "site",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "lint-staged": {
     "**/*.mjs": [
@@ -34,13 +34,13 @@
   "dependencies": {
     "clsx": "^1.1.1",
     "framer-motion": "^5.3.2",
-    "symbolist": "^1.1.0",
     "just-debounce-it": "^3.0.1",
     "leva": "^0.9.15",
     "next": "^12.0.4",
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "symbolist": "^1.2.0"
   },
   "devDependencies": {
     "@bouchenoiremarc/stylelint-config": "^1.2.0",
