--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "prettier": "@marcbouchenoire/prettier-config",
   "husky": {
     "hooks": {
-      "pre-commit": "lerna run --concurrency 1 --stream precommit --since HEAD --exclude-dependents"
+      "pre-commit": "lerna run --concurrency 1 --stream nano-staged --since HEAD --exclude-dependents"
     }
   },
   "engines": {
@@ -31,7 +31,7 @@
     "eslint": "^8.3.0",
     "husky": "4.3.8",
     "lerna": "^4.0.0",
-    "lint-staged": "^12.1.2",
+    "nano-staged": "^0.5.0",
     "prettier": "^2.4.1",
     "tsatsiki": "^2.0.1",
     "tsm": "^2.1.4",
