--- a/packages/site/.eslintrc.json
+++ b/packages/site/.eslintrc.json
@@ -1,6 +1,12 @@
 {
   "extends": [
     "@marcbouchenoire/eslint-config",
-    "@marcbouchenoire/eslint-config/react"
-  ]
+    "@marcbouchenoire/eslint-config/react",
+    "plugin:tailwindcss/recommended"
+  ],
+  "plugins": ["tailwindcss"],
+  "rules": {
+    "import/no-unresolved": ["error", { "ignore": ["mdast", "unist"] }],
+    "tailwindcss/no-custom-classname": "off"
+  }
 }
