--- a/packages/symbolist/package.json
+++ b/packages/symbolist/package.json
@@ -5,7 +5,7 @@
   "author": "Marc Bouchenoire",
   "license": "MIT",
   "repository": "https://github.com/marcbouchenoire/symbolist",
-  "homepage": "https://marcbouchenoire.com/projects/symbolist",
+  "homepage": "https://symbolist.marcbouchenoire.com",
   "keywords": [
     "san francisco",
     "symbols",
