--- a/packages/site/.stylelintrc.json
+++ b/packages/site/.stylelintrc.json
@@ -1,3 +1,13 @@
 {
-  "extends": "@marcbouchenoire/stylelint-config/scss"
+  "extends": "@marcbouchenoire/stylelint-config",
+  "rules": {
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": ["tailwind", "apply", "screen", "layer"]
+      }
+    ],
+    "declaration-block-trailing-semicolon": null,
+    "no-descending-specificity": null
+  }
 }
