--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -3,16 +3,16 @@
   "version": "1.2.0",
   "private": true,
   "nano-staged": {
-    "**/*.mjs": [
+    "**/*.{cjs,mjs}": [
       "eslint --fix",
       "yarn prettier"
     ],
     "**/*.{ts,tsx}": [
       "eslint --fix",
-      "tsatsiki --project tsconfig.json next-env.d.ts",
+      "tsatsiki --project tsconfig.json next-env.d.ts declarations.d.ts",
       "yarn prettier"
     ],
-    "**/*.scss": [
+    "**/*.css": [
       "stylelint --fix",
       "yarn prettier"
     ],
@@ -25,29 +25,50 @@
     "build": "next build",
     "nano-staged": "nano-staged",
     "prettier": "prettier --write --loglevel silent --ignore-path .eslintignore",
-    "lint": "yarn lint:eslint & yarn lint:stylelint && yarn lint:tsc && yarn lint:prettier",
-    "lint:eslint": "eslint '**/*.{mjs,ts,tsx}' --fix",
-    "lint:prettier": "yarn prettier '**/*.{mjs,ts,tsx,json,md,yml,scss}'",
-    "lint:stylelint": "stylelint '**/*.scss' --fix",
+    "lint": "yarn lint:eslint && yarn lint:stylelint && yarn lint:tsc && yarn lint:prettier",
+    "lint:eslint": "eslint '**/*.{cjs,mjs,ts,tsx}' --fix",
+    "lint:prettier": "yarn prettier '**/*.{cjs,mjs,ts,tsx,json,md,yml,scss}'",
+    "lint:stylelint": "stylelint '**/*.css' --fix",
     "lint:tsc": "tsc --project tsconfig.json"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^0.1.4",
+    "@radix-ui/react-presence": "^0.1.1",
+    "@tailwindcss/typography": "^0.5.0",
     "clsx": "^1.1.1",
-    "framer-motion": "^5.3.2",
-    "just-debounce-it": "^3.0.1",
-    "leva": "^0.9.15",
-    "next": "^12.0.4",
-    "next-seo": "^4.28.1",
+    "colord": "^2.9.2",
+    "framer-motion": "^5.5.5",
+    "hast-util-find-and-replace": "^4.0.0",
+    "mdast-util-to-string": "^3.1.0",
+    "next": "^12.0.7",
+    "next-themes": "^0.0.15",
     "react": "^17.0.2",
+    "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
-    "symbolist": "^1.2.0"
+    "rehype-autolink-headings": "^6.1.0",
+    "rehype-prism-plus": "^1.1.3",
+    "rehype-raw": "^6.1.0",
+    "rehype-slug": "^5.0.0",
+    "rehype-stringify": "^9.0.2",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "symbolist": "^1.2.0",
+    "tailwindcss": "^3.0.7",
+    "unified": "^10.1.1",
+    "unist-util-remove": "^3.1.0",
+    "unist-util-select": "^4.0.1"
   },
   "devDependencies": {
     "@marcbouchenoire/stylelint-config": "^1.2.0",
-    "@types/css-font-loading-module": "^0.0.7",
-    "@types/react": "^17.0.36",
+    "@types/mdast": "^3.0.10",
+    "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
-    "sass": "^1.43.4",
-    "stylelint": "^14.1.0"
+    "@types/unist": "^2.0.6",
+    "autoprefixer": "^10.4.0",
+    "eslint-plugin-tailwindcss": "^1.17.2",
+    "postcss": "^8.4.5",
+    "postcss-nesting": "^10.0.3",
+    "stylelint": "^14.2.0",
+    "type-fest": "^2.8.0"
   }
 }
