--- a/lerna.json
+++ b/lerna.json
@@ -4,9 +4,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "useWorkspaces": true,
   "version": "1.2.0",
   "command": {
