--- a/packages/symbolist/package.json
+++ b/packages/symbolist/package.json
@@ -31,27 +31,12 @@
     "./package.json": "./package.json"
   },
   "types": "./dist/index.d.ts",
-  "nano-staged": {
-    "**/*.mjs": [
-      "eslint --fix",
-      "yarn prettier"
-    ],
-    "**/*.{ts,tsx}": [
-      "eslint --fix",
-      "tsatsiki --project tsconfig.json declarations.d.ts",
-      "yarn prettier"
-    ],
-    "**/*.{json,md,yml}": [
-      "yarn prettier"
-    ]
-  },
   "scripts": {
     "build": "microbundle --tsconfig tsconfig.build.json",
-    "nano-staged": "nano-staged",
     "prettier": "prettier --write --loglevel silent --ignore-path .eslintignore",
     "lint": "yarn lint:eslint && yarn lint:tsc && yarn lint:prettier",
     "lint:eslint": "eslint '**/*.{mjs,ts,tsx}' --fix",
-    "lint:prettier": "yarn prettier '**/*.{mjs,ts,tsx,json,md,yml}'",
+    "lint:prettier": "yarn prettier '**/*.{mjs,ts,tsx,json,md}'",
     "lint:tsc": "tsc --project tsconfig.json",
     "generate": "node --loader tsm scripts/generate.ts && yarn prettier 'src/data/*.{ts,json}'",
     "prepublishOnly": "yarn build",
