--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -16,39 +16,40 @@
     "@radix-ui/react-popover": "^0.1.6",
     "clsx": "^1.1.1",
     "colord": "^2.9.2",
-    "framer-motion": "^6.3.0",
-    "hast-util-find-and-replace": "^4.0.0",
+    "framer-motion": "^6.3.15",
+    "hast-util-find-and-replace": "^4.1.1",
     "mdast-util-to-string": "^3.1.0",
-    "next": "^12.1.5",
-    "next-themes": "^0.1.1",
-    "react": "^18.0.0",
+    "next": "^12.1.6",
+    "next-themes": "^0.2.0",
+    "react": "^18.2.0",
     "react-colorful": "^5.5.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^18.2.0",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-prism-plus": "^1.1.3",
+    "rehype-prism-plus": "^1.4.1",
     "rehype-raw": "^6.1.1",
     "rehype-slug": "^5.0.1",
-    "rehype-stringify": "^9.0.2",
+    "rehype-stringify": "^9.0.3",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "symbolist": "^1.2.0",
-    "unified": "^10.1.1",
+    "unified": "^10.1.2",
     "unist-util-remove": "^3.1.0",
     "unist-util-select": "^4.0.1"
   },
   "devDependencies": {
-    "@marcbouchenoire/stylelint-config": "^1.2.0",
-    "@tailwindcss/typography": "^0.5.0",
+    "@marcbouchenoire/stylelint-config": "^1.4.0",
+    "@tailwindcss/typography": "^0.5.2",
+    "@types/hast": "^2.3.4",
     "@types/mdast": "^3.0.10",
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "@types/unist": "^2.0.6",
-    "autoprefixer": "^10.4.1",
-    "postcss": "^8.4.5",
-    "postcss-nesting": "^10.1.0",
-    "prettier-plugin-tailwindcss": "^0.1.3",
-    "stylelint": "^14.2.0",
-    "tailwindcss": "^3.0.8",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "postcss-nesting": "^10.1.9",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "stylelint": "^14.9.1",
+    "tailwindcss": "^3.1.4",
     "write-json-file": "^5.0.0"
   }
 }
