--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "nano-staged": "^0.8.0",
     "prettier": "^2.7.1",
     "tsatsiki": "^2.0.1",
-    "tsx": "^3.12.1",
+    "tsm": "^2.3.0",
     "typescript": "^4.7.4"
   }
 }
