--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -10,11 +10,12 @@
     "lint:eslint": "eslint '**/*.{cjs,mjs,ts,tsx}' --fix",
     "lint:prettier": "yarn prettier '**/*.{cjs,mjs,ts,tsx,json,md,css}'",
     "lint:stylelint": "stylelint '**/*.css' --fix",
-    "lint:tsc": "tsc --project tsconfig.json"
+    "lint:tsc": "tsc --project tsconfig.json",
+    "postinstall": "node src/scripts/postinstall.mjs"
   },
   "dependencies": {
     "@radix-ui/react-popover": "^1.0.0",
-    "clsx": "^1.1.1",
+    "clsx": "^1.2.1",
     "colord": "^2.9.2",
     "framer-motion": "^7.0.0",
     "hast-util-find-and-replace": "^4.1.1",
@@ -37,7 +38,7 @@
     "unist-util-select": "^4.0.1"
   },
   "devDependencies": {
-    "@marcbouchenoire/stylelint-config": "^1.4.0",
+    "@marcbouchenoire/stylelint-config": "^1.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "@types/hast": "^2.3.4",
     "@types/mdast": "^3.0.10",
@@ -48,7 +49,7 @@
     "postcss": "^8.4.14",
     "postcss-nesting": "^10.1.9",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "stylelint": "^14.9.1",
+    "stylelint": "^14.16.1",
     "tailwindcss": "^3.1.4",
     "write-json-file": "^5.0.0"
   }
